--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "glob": "^7.1.1",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
+    "lodash": "^4.17.4",
     "path-complete-extname": "^0.1.0",
+    "payment": "^2.2.1",
     "rails-erb-loader": "^3.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
