--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "glob": "^7.1.1",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
-    "lodash": "^4.17.4",
     "path-complete-extname": "^0.1.0",
     "payment": "^2.2.1",
+    "promise-polyfill": "^6.0.2",
     "rails-erb-loader": "^3.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-html-id": "^0.1.0",
     "react-sortable-hoc": "^0.6.1",
     "webpack": "^2.2.1",
     "webpack-merge": "^4.1.0",
-    "webpacker-react": "^0.2.1"
+    "webpacker-react": "^0.2.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.23.0",
