--- a/package.json
+++ b/package.json
@@ -1,30 +1,59 @@
 {
   "dependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-react": "^6.23.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "7.x",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
+    "cadmus-navbar-admin": "^1.0.1",
+    "classnames": "^2.2.5",
     "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.4",
-    "compression-webpack-plugin": "^0.3.2",
-    "glob": "^7.1.1",
+    "coffee-script": "^1.12.6",
+    "compression-webpack-plugin": "^0.4.0",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "glob": "^7.1.2",
+    "immutable": "^3.8.1",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
+    "js-yaml": "^3.8.4",
+    "json-fetch": "^7.2.0",
+    "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
     "payment": "^2.2.1",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-smart-import": "^0.7.4",
     "promise-polyfill": "^6.0.2",
-    "rails-erb-loader": "^3.2.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "prop-types": "^15.5.10",
+    "rails-erb-loader": "^5.0.2",
+    "react": "^15.6.1",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
+    "react-dom": "^15.6.1",
     "react-html-id": "^0.1.0",
+    "react-immutable-proptypes": "^2.1.0",
+    "react-redux": "^5.0.5",
     "react-sortable-hoc": "^0.6.1",
-    "webpack": "^2.2.1",
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "resolve-url-loader": "^2.0.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.6.1",
+    "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0",
     "webpacker-react": "^0.2.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "webpack-dev-server": "^2.4.2"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "webpack-dev-server": "^2.4.5"
   }
 }
