--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
     "payment": "^2.2.1",
+    "popper.js": "^1.12.2",
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^2.0.6",
     "postcss-smart-import": "^0.7.4",
