--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -26,8 +26,8 @@ development:
   <<: *default
 
   dev_server:
-    host: 0.0.0.0
-    port: 8080
+    host: localhost
+    port: 8100
     https: false
 
 test:
