--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "fsevents": "2.1.2",
     "glob": "^7.1.2",
     "immutable": "^3.8.1",
     "jquery": "^3.4.0",
@@ -22,6 +23,7 @@
     "js-yaml": "^3.13.1",
     "json-fetch": "^7.2.0",
     "node-sass": "^4.5.3",
+    "node-zopfli": "2.1.3",
     "path-complete-extname": "^0.1.0",
     "payment": "^2.2.1",
     "popper.js": "^1.12.2",
