--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "webpack-dev-server": "^3.1.11"
-  }
+  },
+  "license": "MIT"
 }
