--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "webpack-dev-server": "^3.1.11"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "webpack": "webpack"
+  }
 }
