--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install node
         uses: actions/setup-node@v3
       - name: Install libsodium23
-        run: apt-get update && apt-get install libsodium23
+        run: sudo apt-get update && sudo apt-get install libsodium23
       - name: Database setup
         run: bundle exec rake db:create db:schema:load
       - name: Compile assets
