--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,14 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - name: Read .node-version
+        id: node-version
+        run: echo "node-version=$(cat .node-version)" >> $GITHUB_OUTPUT
       - name: Install node
         uses: actions/setup-node@v3
+        with:
+          cache: yarn
+          node-version: ${{ steps.node-version.outputs.node-version }}
       - name: Database setup
         run: bundle exec rake db:create db:schema:load
       - name: Compile assets
