--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,6 @@ jobs:
     steps:
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@master
@@ -27,3 +25,47 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}:${{ github.event.release.name }}
             ghcr.io/${{ github.repository }}:latest
+  heroku-release:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        app:
+          - eventlite-annewil
+          - eventlite-occultopus
+    steps:
+      - name: Install Heroku CLI
+        run: curl https://cli-assets.heroku.com/install.sh | sh
+      - name: Log in to registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Log into Heroku Container Registry
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:login
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
+      - name: Write dockerfiles
+        run: |
+          echo "FROM ghcr.io/${{ github.repository }}:${{ github.sha }}" >>Dockerfile.web
+          echo "FROM ghcr.io/${{ github.repository }}:${{ github.sha }}" >>Dockerfile.release
+          echo "RUN bundle exec bin/rails db:migrate" >>Dockerfile.release
+      - name: Build and push web image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile.web
+          push: true
+          platforms: linux/amd64
+          tags: registry.heroku.com/${{ matrix.app }}/web
+      - name: Build and push release image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile.release
+          push: true
+          platforms: linux/amd64
+          tags: registry.heroku.com/${{ matrix.app }}/release
+      - name: Perform release
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:release -a ${{ matrix.app }} web release
