--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,10 +33,10 @@ jobs:
       matrix:
         app:
           - eventlite-occultopus
-          # - eventlite-annewil
+          - eventlite-annewil
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only -a ${{ matrix.app }}
+      - run: cd fly/applications/${{ matrix.app }} && flyctl deploy --remote-only -a ${{ matrix.app }}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
